<resources>
    <string name="app_name">Desafio2</string>

    <!-- String Login -->
    <string name="til_username">E-mail</string>
    <string name="btn_register">Register</string>
    <string name="ou">OR</string>
    <string name="til_password">Senha</string>
    <string name="btn_login">Log in</string>
    <string name="tv_info">Não tem conta? Cadastre-se</string>


    <string name="first_fragment">Fragmento 1</string>
    <string name="second_fragment">Fragmento 2</string>
    <string name="titleCadastrar">Cadastrar</string>
    <string name="tilEmail">E-mail</string>
    <string name="tilConfirmPassword">Confirmar senha</string>
    <string name="btnCadastrar">Cadastrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_home">Home</string>
    <string name="tvEntrada">Entradas</string>
    <string name="tvGasto">Gastos</string>
    <string name="legProfile">Profile</string>
    <string name="til_descr">Descrição</string>
    <string name="legCadastrarGastos">Cadastrar</string>
    <string name="tilCategoria">Categoria</string>
    <string name="tilDataHora">Data e Hora</string>
    <string name="tilValor">Valor</string>
    <string name="btnCadastrarGasto">Cadastrar</string>
</resources>